--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@kinde-oss/kinde-auth-react": "^3.0.23",
+    "@stytch/react": "^12.0.0",
+    "@stytch/stytch-react": "^4.1.2",
+    "@stytch/vanilla-js": "^3.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
