--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@descope/react-sdk": "^2.0.3",
+    "@frontegg/react": "^6.0.12",
     "@kinde-oss/kinde-auth-react": "^3.0.23",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
